# dtek-blackout-client

./: .gitignore  CONTRIBUTING.md  README.md  UML_diagram.mermaid  example_test.py  manual_test.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dtek_client/: __init__.py  browser_auth.py  client.py  const.py  exceptions.py  models.py  stub_client.py
dtek_client/scripts/: example.py
tests/: conftest.py  test_browser_auth.py  test_client.py  test_exceptions.py  test_models.py  test_stub_client.py
tests/fixtures/: home_num_response.json  streets_response.json
