[project]
name = "dtek-blackout-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Rachenko",email = "alexey.rachenko@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "curl-cffi (>=0.14.0,<0.15.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
