[project]
name = "dtek-blackout-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Rachenko",email = "alexey.rachenko@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "curl-cffi (>=0.14.0,<0.15.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
