[project]
name = "dtek-blackout-client"
version = "0.1.2"
description = "Async Python client for DTEK regional electricity-outage schedule sites"
authors = [
    {name = "Rachenko", email = "alexey.rachenko@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dtek", "home-assistant", "ukraine", "electricity", "outage", "blackout", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # curl_cffi impersonates a real Chrome browser to pass TLS fingerprinting on DTEK sites.
    "curl-cffi (>=0.14.0,<0.15.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    # playwright is used by browser_auth.py to bypass Incapsula/Imperva WAF challenges.
    "playwright (>=1.58.0,<2.0.0)",
    "tzdata (>=2026.1,<2027.0)"
]

[project.urls]
homepage = "https://github.com/shed-crypto/dtek-blackout-client"
repository = "https://github.com/shed-crypto/dtek-blackout-client"
documentation = "https://github.com/shed-crypto/dtek-blackout-client#readme"

[tool.poetry]
name = "dtek-blackout-client"
version = "0.1.2"
description = "Async Python client for DTEK regional electricity-outage schedule sites"
authors = ["Rachenko <alexey.rachenko@gmail.com>"]
packages = [{ include = "dtek_client" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "mypy (>=1.8.0)",
    "black (>=24.0.0,<25.0.0)",
    "ruff (>=0.4.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=dtek_client --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.run]
source = ["dtek_client"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "curl_cffi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN", "S", "N"]
ignore = ["S101", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["dtek_client"]